# CatLa-project

./: .gitignore  CMakeLists.txt
src/: CatLa.cpp  CatLa.h
src/gc/: GC.cpp  GC.h
src/heap/: HeapAllocator.cpp  HeapAllocator.h  HeapChunk.cpp  HeapChunk.h  HeapManager.cpp  HeapManager.h  HeapObject.cpp  HeapObject.h  HeapRegion.cpp  HeapRegion.h  heap.h
src/modules/: CatLaClass.cpp  CatLaClass.h  modules.h
src/util/: Benchmark.cpp  Benchmark.h  Concurrent.h  StringUtil.h  TypeUtil.hpp
src/vm/: CatVM.cpp  CatVM.h  NyanVM.cpp  NyanVM.h  Opcode.h  PrimitiveType.cpp  PrimitiveType.h  vm.h
src/vm/modules/: CatLaClass.cpp  CatLaClass.h  CatLaFunction.cpp  CatLaFunction.h  CatLaModule.cpp  CatLaModule.h  CodeBlock.cpp  CodeBlock.h  Field.h  Function.cpp  Function.h  Module.cpp  Module.h  Type.cpp  Type.h  VMModule.cpp  VMModule.h  modules.h
src/vm/modules/orders/: Add.cpp  Add.h  GetArgument.cpp  GetArgument.h  GetConst.cpp  GetConst.h  GetField.cpp  GetField.h  GetFieldValue.cpp  GetFieldValue.h  Jump.cpp  Jump.h  New.cpp  New.h  Order.cpp  Order.h  Orders.h  ReturnFunction.cpp  ReturnFunction.h  SetFieldValue.cpp  SetFieldValue.h
src/vm/modules/util/: BitSet.h
src/vm/parser/: Structs.h  VMParser.cpp  VMParser.h
src/vm/stack/: StackUtil.cpp  stack.h  stack_win32.cpp
